# agentic-ai-training

./: .env.example  .gitignore  AGENTS.md  README.md  SETUP.md  check_setup.py  pyproject.toml
1_openai_agents_sdk/: 1_lab1_agents.ipynb  2_lab2_cold_email.ipynb  3_lab3_structured_guardrails.ipynb  AGENTS.md  README.md
2_crewai/: AGENTS.md  README.md
2_crewai/debate/: .env.example
2_crewai/debate/src/debate/config/: agents.yaml
2_crewai/financial_researcher/src/financial_researcher/config/: agents.yaml
2_crewai/stock_picker/: .env.example  .gitignore
2_crewai/stock_picker/src/stock_picker/config/: agents.yaml
2_crewai/stock_picker/src/stock_picker/tools/: push_tool.py
3_langgraph/: .env.example  .gitignore  1_lab1_graphs.ipynb  2_lab2_tools_memory.ipynb  AGENTS.md  README.md  pyproject.toml
level-up/: connect-your-gmail.md  gmail_inbox_agent.py
notebooks/: 01_concepts.ipynb
project/: app.py  inbox_agent.py  sample_inbox.json
