[project]
name = "agentic-ai-langgraph"
version = "0.1.0"
description = "Module 3 — LangGraph labs (build a graph; tools + memory)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.50",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.0",
    "gradio>=5.22.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
